infrastructure/keycloak/keycloak-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-tailscale
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - keycloak
  rules:
    - host: keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
